--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,53 @@
-<p>login works!</p>
+<div class="login-form pt-5">
+    <div class="main-div">
+        <div class="panel">
+            <h2>Admin Login</h2>
+            <p>Please enter your email and password</p>
+        </div>
+        <form id="Login">
+            <div class="form-group">
+                <input type="email" class="form-control" placeholder="Email Address">
+            </div>
+
+            <div class="form-group">
+                <input type="password" class="form-control" placeholder="Password">
+            </div>
+            <div class="forgot pointer">
+                <a data-target="#resetModal" data-toggle="modal">Forgot password?</a>
+            </div>
+
+            <button type="submit" class="btn btn-danger btn-block h-50">Login</button>
+        </form>
+    </div>
+    <p class="botto-text"> Developed by Junaid Iqbal</p>
+</div>
+
+
+
+
+<div class="modal" id="resetModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h4 class="modal-title">Reset Password</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+
+            <div class="modal-body">
+                <p class="text-center">
+                    Please enter your registered email address to reset your account password!
+                </p>
+                <div class="form-group">
+                    <label class="w-100">Email*</label>
+                    <input class="form-control" type="email" placeholder="Email">
+                </div>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-success" data-dismiss="modal">Submit</button>
+            </div>
+        </div>
+    </div>
+</div>
