--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,7 +16,7 @@
                 <a data-target="#resetModal" data-toggle="modal">Forgot password?</a>
             </div>
 
-            <button type="submit" class="btn btn-danger btn-block h-50">Login</button>
+            <button routerLink="/home" class="btn btn-danger btn-block h-50">Login</button>
         </form>
     </div>
     <p class="botto-text"> Developed by Junaid Iqbal</p>
