--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,26 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-md bg-dark navbar-dark shadow-sm fixed-top px-5">
+
+    <a class="navbar-brand pointer" routerLink="/home">
+        <img src="/assets/imgs/icon.jpg">
+    </a>
+
+    <!-- Toggler/collapsibe Button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Navbar links -->
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item mx-3">
+                <a class="nav-link text-light pointer"><i class="fa fa-cube mr-1"></i> Categories</a>
+            </li>
+            <li class="nav-item mx-3">
+                <a class="nav-link text-light pointer"><i class="fa fa-cube mr-1"></i> Deals</a>
+            </li>
+            <li class="nav-item mx-3">
+                <a class="nav-link text-light pointer"><i class="fa fa-user mr-1"></i> Account</a>
+            </li>
+        </ul>
+    </div>
+</nav>
