--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,11 +11,11 @@
   color: #6abc07 !important;
 }
 
-.bg-primary {
+.bgPimary {
   background-color: #f57224 !important;
 }
 
-.bg-secondary {
+.bgSecondary {
   background-color: #6abc07 !important;
 }
 
@@ -43,7 +43,7 @@
   color: #646464 !important;
 }
 
-.bg-gray {
+.bgGray {
   background-color: gray;
 }
 
@@ -55,7 +55,7 @@
   color: #4e5661 !important;
 }
 
-.bg-dark {
+.bgDark {
   background-color: #4e5661 !important;
 }
 
@@ -65,5 +65,9 @@ body {
 }
 
 .mainContent {
-  padding: 5.5em 2em;
+  padding: 3em 0;
+}
+
+body {
+  font-family: "Lato", sans-serif;
 }
