--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,20 +4,19 @@
             <h2>Admin Login</h2>
             <p>Please enter your email and password</p>
         </div>
-        <form id="Login">
-            <div class="form-group">
-                <input type="email" class="form-control" placeholder="Email Address">
-            </div>
+        <div class="form-group">
+            <input [(ngModel)]="user.email" type="email" class="form-control" placeholder="Email Address">
+        </div>
 
-            <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password">
-            </div>
-            <div class="forgot pointer">
-                <a data-target="#resetModal" data-toggle="modal">Forgot password?</a>
-            </div>
+        <div class="form-group">
+            <input [(ngModel)]="user.password" type="password" class="form-control" placeholder="Password">
+        </div>
+        <div class="forgot pointer">
+            <a data-target="#resetModal" data-toggle="modal">Forgot password?</a>
+        </div>
 
-            <button routerLink="/home" class="btn btn-danger btn-block h-50">Login</button>
-        </form>
+        <button [disabled]="!user.email || !user.password" (click)="onLogin()"
+            class="btn btn-danger btn-block h-50">Login</button>
     </div>
     <p class="botto-text"> Developed by Junaid Iqbal</p>
 </div>
