--- a/src/app/deals/deals.component.scss
+++ b/src/app/deals/deals.component.scss
@@ -1,4 +1,11 @@
 .anItem {
+  position: relative;
+  height: 340px;
+  h3 {
+    position: absolute;
+    width: 90%;
+    bottom: 1rem;
+  }
   img {
     height: 120px;
     object-fit: cover;
