--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,1 +1,12 @@
-<p>gallery works!</p>
+<ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }" [template]="customLoadingTemplate">
+</ngx-loading>
+
+<app-header></app-header>
+
+<div class="mainContent">
+    <div class="row">
+        <div class="col-md-2">
+
+        </div>
+    </div>
+</div>
