--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,4 +3,13 @@ nav {
   img {
     width: 120px;
   }
+  .activeLink {
+    .nav-link {
+      color: var(--warning) !important;
+    }
+  }
+}
+
+*:focus {
+  outline: none !important;
 }
