--- a/src/app/combodeals/combodeals.component.html
+++ b/src/app/combodeals/combodeals.component.html
@@ -1,1 +1,22 @@
-<p>combodeals works!</p>
+<div class="row mt-2">
+
+    <div class="col-md-12 my-3">
+        <h4>Combo Deals ({{comboDeals.length}})
+            <button class="btn btn-primary float-right">Add New Deal</button>
+        </h4>
+    </div>
+
+    <div *ngFor="let deal of comboDeals; index as i" class="col-md-3 mb-4">
+        <div class="anItem bg-white rounded shadow-sm pointer p-3">
+            <img class="w-100 mb-2" src="/assets/imgs/food10.jpeg">
+            <h4>{{deal.name}}</h4>
+            <p *ngFor="let item of deal.items" class="mb-0">{{item}}</p>
+            <h3 class="mb-0 mt-2">
+                <span class="badge badge-warning">RS. {{deal.price}}</span>
+                <span class="float-right">
+                    <i class="fa fa-edit text-primary"></i>
+                </span>
+            </h3>
+        </div>
+    </div>
+</div>
