--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -3,10 +3,48 @@
 
 <app-header></app-header>
 
-<div class="mainContent">
-    <div class="row">
-        <div class="col-md-2">
+<div class="mainContent pt-5">
+    <div class="row mt-5 px-5">
+        <div class="col-md-12">
+            <button (click)="imageUrl=''" data-toggle="modal" data-target="#uploadImg"
+                class="btn btn-primary float-right">Add New Image</button>
+        </div>
+        <div *ngFor="let img of allImages; index as i" class="col-md-2">
+            <div class="anItem bg-white shadow-sm rounded p-3 mt-4">
+                <img class="w-100" [src]="img.imageUrl">
+                <label (click)="copyUrl(i)" [id]="'abc' + i" class="w-100 mt-3 mb-0 pointer"><i class="fa fa-link"></i>
+                    Copy Link</label>
+            </div>
+        </div>
+    </div>
+</div>
 
+
+<div class="modal" id="uploadImg">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h4 class="modal-title">Upload Image</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+
+            <div class="modal-body">
+                <img style="max-height: 350px; object-fit: contain;" class="w-100"
+                    [src]="imageUrl || '/assets/imgs/icon.jpg'">
+                <div class="form-group">
+                    <label class="w-100 mt-3">Choose image*</label>
+                    <label class="btn btn-info w-100 mb-3 pointer"> Upload Picture
+                        <input type="file" (change)="onChangeFile($event)">
+                    </label>
+                </div>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                <button [disabled]="!imageUrl" (click)="uploadImage()" type="button" class="btn btn-success"
+                    data-dismiss="modal">Submit</button>
+            </div>
         </div>
     </div>
 </div>
