--- a/src/app/pizza/pizza.component.html
+++ b/src/app/pizza/pizza.component.html
@@ -1,1 +1,95 @@
 <app-header></app-header>
+
+<ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }" [template]="customLoadingTemplate">
+</ngx-loading>
+
+
+<div class="row mt-4 p-5">
+
+    <div class="col-md-12 my-3">
+        <h4>Pizza Special ({{allPizzas.length}})
+            <button (click)="addNewDeal()" data-target="#addDeal" data-toggle="modal"
+                class="btn btn-primary float-right">Add New Pizza</button>
+        </h4>
+    </div>
+
+    <div *ngFor="let deal of allPizzas; index as i" class="col-md-3 mb-4">
+        <div class="anItem bg-white rounded shadow-sm pointer p-3">
+            <img class="w-100 mb-2" [src]="deal.imageUrl || '/assets/imgs/icon.jpg'">
+            <h4>{{deal.name}}</h4>
+            <p class="gray">{{deal.ingredients}}</p>
+            <div class="bottomContent mt-3">
+                <a class="text-primary bold">Small: RS.{{deal.small}}</a><br />
+                <a class="text-primary bold">Medium: RS.{{deal.medium}}</a><br />
+                <a class="text-primary bold">Large: RS.{{deal.large}}</a>
+                <h3 class="mb-0 mt-2">
+                    <span data-target="#deleteDeal" data-toggle="modal" (click)="deleteDeal(i)"
+                        class="float-right ml-3">
+                        <i class="fa fa-trash text-danger"></i>
+                    </span>
+                    <span data-target="#addDeal" data-toggle="modal" (click)="editDeal(deal, i)" class="float-right">
+                        <i class="fa fa-edit text-primary"></i>
+                    </span>
+                </h3>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+
+<div class="modal" id="addDeal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h4 class="modal-title">Deal</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+
+            <div class="modal-body">
+                <div class="form-group">
+                    <label class="w-100">Deal Image Url*</label>
+                    <input class="form-control" [(ngModel)]="pizza.imageUrl" type="text" placeholder="Paste Url">
+                </div>
+                <div class="form-group">
+                    <label class="w-100">Deal Name*</label>
+                    <input class="form-control" [(ngModel)]="pizza.name" type="text" placeholder="Name">
+                </div>
+                <div class="form-group">
+                    <label class="w-100">Deal Price*</label>
+                    <input class="form-control" [(ngModel)]="pizza.price" type="number" placeholder="Price">
+                </div>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                <button [disabled]="!pizza.imageUrl || !pizza.name || !pizza.price" (click)="saveDeal()" type="button"
+                    class="btn btn-success" data-dismiss="modal">Submit</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal" id="deleteDeal">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h4 class="modal-title">Delete this deal?</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+
+            <div class="modal-body">
+                Are you sure you want to permanently remove this deal?
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-light" data-dismiss="modal">Cancel</button>
+                <button (click)="removeFirebaseDeal()" type="button" class="btn btn-danger"
+                    data-dismiss="modal">Remove</button>
+            </div>
+        </div>
+    </div>
+</div>
