--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,10 +20,11 @@
             </li>
             <li class="nav-item mx-3">
                 <a class="nav-link text-light pointer"><i class="fas fa-bullhorn mr-1"></i> New Arrival</a>
-            </li>
+            </li>ٖ
             <li class="nav-item mx-3">
-                <a class="nav-link text-light pointer"><i class="fa fa-user mr-1"></i> Account</a>
-            </li>
+                <a (click)="logout()" class="nav-link text-light pointer"><i class="fas fa-power-off mr-1"></i>
+                    Logout</a>
+            </li>ٖ
         </ul>
     </div>
 </nav>
