--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,19 +3,19 @@
         <div class="col-md-4"></div>
         <div class="col-md-4 text-center pt-3">
             <a href="https://www.facebook.com/imjuni007" target="_blank">
-                <i class="fa fa-star mx-2 bg-primary"></i>
+                <img src="/assets/imgs/fb.png">
             </a>
             <a href="https://www.fiverr.com/share/o8lLW4" target="_blank">
-                <i class="fa fa-star mx-2 bg-success"></i>
+                <img src="/assets/imgs/fiverr.jpg">
             </a>
             <a href="https://twitter.com/JuniLuka" target="_blank">
-                <i class="fa fa-star mx-2 bg-info mt-1"></i>
+                <img src="/assets/imgs/twitter.png">
             </a>
             <a href="https://www.instagram.com/juni_luka" target="_blank">
-                <i class="fa fa-star mx-2 bg-danger"></i>
+                <img src="/assets/imgs/insta.png">
             </a>
             <a href="https://www.linkedin.com/in/junaid-iqbal-b240b5158" target="_blank">
-                <i class="fa fa-star mx-2 bg-primary"></i>
+                <img src="/assets/imgs/linked.png">
             </a>
         </div>
         <div class="col-md-4 text-right pt-3 pr-5">
