--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,21 +1,33 @@
+<ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px'}" [template]="customLoadingTemplate">
+</ngx-loading>
+
 <div class="login-form pt-5">
-    <div class="main-div">
+    <div [formGroup]="onLoginForm" class="main-div">
         <div class="panel">
             <h2>Admin Login</h2>
             <p>Please enter your email and password</p>
         </div>
         <div class="form-group">
-            <input [(ngModel)]="user.email" type="email" class="form-control" placeholder="Email Address">
+            <input [(ngModel)]="email" formControlName="email" type="email" class="form-control"
+                placeholder="Email Address">
         </div>
+        <p class="errorMsg text-left"
+            *ngIf="onLoginForm.get('email').touched && onLoginForm.get('email').hasError('required')">
+            Email is required*</p>
 
         <div class="form-group">
-            <input [(ngModel)]="user.password" type="password" class="form-control" placeholder="Password">
+            <input [(ngModel)]="password" formControlName="password" type="password" class="form-control"
+                placeholder="Password">
         </div>
+        <p class="errorMsg text-left"
+            *ngIf="onLoginForm.get('password').touched && onLoginForm.get('password').hasError('required')">
+            Password is required*</p>
+
         <div class="forgot pointer">
             <a data-target="#resetModal" data-toggle="modal">Forgot password?</a>
         </div>
 
-        <button [disabled]="!user.email || !user.password" (click)="onLogin()"
+        <button [disabled]="!onLoginForm.valid" (click)="userLogin()"
             class="btn btn-danger btn-block h-50">Login</button>
     </div>
     <p class="botto-text"> Developed by Junaid Iqbal</p>
@@ -39,13 +51,14 @@
                 </p>
                 <div class="form-group">
                     <label class="w-100">Email*</label>
-                    <input class="form-control" type="email" placeholder="Email">
+                    <input [(ngModel)]="resetEmail" class="form-control" type="email" placeholder="Email">
                 </div>
             </div>
 
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-success" data-dismiss="modal">Submit</button>
+                <button [disabled]="!resetEmail" (click)="resetPassword()" type="button" class="btn btn-success"
+                    data-dismiss="modal">Submit</button>
             </div>
         </div>
     </div>
