--- a/src/app/pizza/pizza.component.html
+++ b/src/app/pizza/pizza.component.html
@@ -38,34 +38,42 @@
 </div>
 
 
-<div class="modal" id="addDeal">
+<div class="modal fade" id="addDeal">
     <div class="modal-dialog">
         <div class="modal-content">
 
             <div class="modal-header">
-                <h4 class="modal-title">Deal</h4>
+                <h4 class="modal-title">Pizza</h4>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
 
             <div class="modal-body">
                 <div class="form-group">
-                    <label class="w-100">Deal Image Url*</label>
+                    <label class="w-100">Pizza Image Url*</label>
                     <input class="form-control" [(ngModel)]="pizza.imageUrl" type="text" placeholder="Paste Url">
                 </div>
                 <div class="form-group">
-                    <label class="w-100">Deal Name*</label>
+                    <label class="w-100">Pizza Name*</label>
                     <input class="form-control" [(ngModel)]="pizza.name" type="text" placeholder="Name">
                 </div>
                 <div class="form-group">
-                    <label class="w-100">Deal Price*</label>
-                    <input class="form-control" [(ngModel)]="pizza.price" type="number" placeholder="Price">
+                    <label class="w-100">Small Price*</label>
+                    <input class="form-control" [(ngModel)]="pizza.small" type="number" placeholder="Small">
+                </div>
+                <div class="form-group">
+                    <label class="w-100">Medium Price*</label>
+                    <input class="form-control" [(ngModel)]="pizza.medium" type="number" placeholder="Medium">
+                </div>
+                <div class="form-group">
+                    <label class="w-100">Large Price*</label>
+                    <input class="form-control" [(ngModel)]="pizza.large" type="number" placeholder="Large">
                 </div>
             </div>
 
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                <button [disabled]="!pizza.imageUrl || !pizza.name || !pizza.price" (click)="saveDeal()" type="button"
-                    class="btn btn-success" data-dismiss="modal">Submit</button>
+                <button [disabled]="!pizza.imageUrl || !pizza.name || !pizza.small || !pizza.medium || !pizza.large"
+                    (click)="saveDeal()" type="button" class="btn btn-success" data-dismiss="modal">Submit</button>
             </div>
         </div>
     </div>
