fade class added to the modal

--- a/src/app/combodeals/combodeals.component.html
+++ b/src/app/combodeals/combodeals.component.html
@@ -27,7 +27,7 @@
 </div>
 
 
-<div class="modal" id="addComboDeal">
+<div class="modal fade" id="addComboDeal">
     <div class="modal-dialog">
         <div class="modal-content">
 
@@ -78,7 +78,7 @@
 </div>
 
 
-<div class="modal" id="deleteComboDeal">
+<div class="modal fade" id="deleteComboDeal">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
 
