--- a/src/app/deals/deals.component.html
+++ b/src/app/deals/deals.component.html
@@ -30,7 +30,7 @@
 </div>
 
 
-<div class="modal" id="addDeal">
+<div class="modal fade" id="addDeal">
     <div class="modal-dialog">
         <div class="modal-content">
 
@@ -81,7 +81,7 @@
 </div>
 
 
-<div class="modal" id="deleteDeal">
+<div class="modal fade" id="deleteDeal">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
 
