--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -20,7 +20,7 @@
 </div>
 
 
-<div class="modal" id="uploadImg">
+<div class="modal fade" id="uploadImg">
     <div class="modal-dialog">
         <div class="modal-content">
 
