--- a/src/app/pizza/pizza.component.html
+++ b/src/app/pizza/pizza.component.html
@@ -80,7 +80,7 @@
 </div>
 
 
-<div class="modal" id="deleteDeal">
+<div class="modal fade" id="deleteDeal">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
 
