--- a/src/app/sideorders/sideorders.component.html
+++ b/src/app/sideorders/sideorders.component.html
@@ -44,7 +44,7 @@
 </div>
 
 
-<div class="modal" id="addMeal">
+<div class="modal fade" id="addMeal">
     <div class="modal-dialog">
         <div class="modal-content">
 
@@ -78,7 +78,7 @@
 </div>
 
 
-<div class="modal" id="deleteMeal">
+<div class="modal fade" id="deleteMeal">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
 
