--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -46,23 +46,24 @@
             <a class="nav-link active" data-toggle="tab" href="#home">Hot Deals</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#menu1">Side Orders</a>
-        </li>
-        <li class="nav-item">
             <a class="nav-link" data-toggle="tab" href="#menu2">Combo Deals</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" data-toggle="tab" href="#menu1">Side Orders</a>
+        </li>
+        
     </ul>
 
     <!-- Tab panes -->
     <div class="tab-content">
         <div class="tab-pane container active" id="home">
-            <app-deals></app-deals>
+            <app-deals [allDeals]="allDeals"></app-deals>
+        </div>
+        <div class="tab-pane container fade" id="menu2">
+            <app-deals [allDeals]="comboDeals"></app-deals>
         </div>
         <div class="tab-pane container fade" id="menu1">
             <app-sideorders></app-sideorders>
-        </div>
-        <div class="tab-pane container fade" id="menu2">
-            <app-combodeals></app-combodeals>
         </div>
     </div>
 </div>
