add/Edit Modal opened

--- a/src/app/deals/deals.component.html
+++ b/src/app/deals/deals.component.html
@@ -31,7 +31,7 @@
 
 
 <div *ngIf="modalClick" class="modal fade" id="addDeal">
- <app-add-deal-modal [deal]="deal"></app-add-deal-modal>
+    <app-add-deal-modal [deal]="deal" (modalClosed)="closeModal($event)"></app-add-deal-modal>
 </div>
 
 
