--- a/src/app/add-deal-modal/add-deal-modal.component.html
+++ b/src/app/add-deal-modal/add-deal-modal.component.html
@@ -1,49 +1,47 @@
+<div class="modal-dialog">
+    <div class="modal-content">
 
-    <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-header">
+            <h4 class="modal-title">Deal</h4>
+            <button (click)="emitCloseModal()" type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
 
-            <div class="modal-header">
-                <h4 class="modal-title">Deal</h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <div class="modal-body">
+            <div class="form-group">
+                <label class="w-100">Deal Image Url*</label>
+                <input class="form-control" [(ngModel)]="deal.imageUrl" type="text" placeholder="Paste Url">
             </div>
-
-            <div class="modal-body">
-                <div class="form-group">
-                    <label class="w-100">Deal Image Url*</label>
-                    <input class="form-control" [(ngModel)]="deal.imageUrl" type="text" placeholder="Paste Url">
-                </div>
-                <div class="form-group">
-                    <label class="w-100">Deal Name*</label>
-                    <input class="form-control" [(ngModel)]="deal.name" type="text" placeholder="Name">
-                </div>
-                <div class="form-group">
-                    <label class="w-100">Deal Price*</label>
-                    <input class="form-control" [(ngModel)]="deal.price" type="number" placeholder="Price">
-                </div>
-                <div class="form-group">
-                    <label class="w-100">Deal Items / Meals</label>
-                    <ul *ngIf="deal.items.length">
-                        <li *ngFor="let item of deal.items; index as i">{{item}}
-                            <i (click)="removeItem(i)" class="fa fa-times text-danger float-right mr-3 pointer"></i>
-                        </li>
-                    </ul>
-                    <div class="input-group">
-                        <input (keyup.enter)="addItem()" type="text" [(ngModel)]="dealItem" class="form-control"
-                            placeholder="Deal Items">
-                        <div class="input-group-prepend">
-                            <span (click)="addItem()" class="input-group-text">
-                                <i class="fa fa-plus"></i>
-                            </span>
-                        </div>
+            <div class="form-group">
+                <label class="w-100">Deal Name*</label>
+                <input class="form-control" [(ngModel)]="deal.name" type="text" placeholder="Name">
+            </div>
+            <div class="form-group">
+                <label class="w-100">Deal Price*</label>
+                <input class="form-control" [(ngModel)]="deal.price" type="number" placeholder="Price">
+            </div>
+            <div class="form-group">
+                <label class="w-100">Deal Items / Meals</label>
+                <ul *ngIf="deal.items.length">
+                    <li *ngFor="let item of deal.items; index as i">{{item}}
+                        <i (click)="removeItem(i)" class="fa fa-times text-danger float-right mr-3 pointer"></i>
+                    </li>
+                </ul>
+                <div class="input-group">
+                    <input (keyup.enter)="addItem()" type="text" [(ngModel)]="dealItem" class="form-control"
+                        placeholder="Deal Items">
+                    <div class="input-group-prepend">
+                        <span (click)="addItem()" class="input-group-text">
+                            <i class="fa fa-plus"></i>
+                        </span>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                <button [disabled]="!deal.imageUrl || !deal.name || !deal.price || !deal.items.length"
-                    (click)="saveDeal()" type="button" class="btn btn-success" data-dismiss="modal">Submit</button>
-            </div>
+        <div class="modal-footer">
+            <button (click)="emitCloseModal()" type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+            <button [disabled]="!deal.imageUrl || !deal.name || !deal.price || !deal.items.length" (click)="saveDeal()"
+                type="button" class="btn btn-success" data-dismiss="modal">Submit</button>
         </div>
     </div>
-
+</div>
