--- a/src/app/delete-deal-modal/delete-deal-modal.component.html
+++ b/src/app/delete-deal-modal/delete-deal-modal.component.html
@@ -1,1 +1,19 @@
-<p>delete-deal-modal works!</p>
+<div class="modal-dialog modal-sm">
+    <div class="modal-content">
+
+        <div class="modal-header">
+            <h4 class="modal-title">Delete this deal?</h4>
+            <button (click)="emitCloseModal()" type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+
+        <div class="modal-body">
+            Are you sure you want to permanently remove this deal?
+        </div>
+
+        <div class="modal-footer">
+            <button (click)="emitCloseModal()" type="button" class="btn btn-light" data-dismiss="modal">Cancel</button>
+            <button (click)="removeFirebaseDeal()" type="button" class="btn btn-danger"
+                data-dismiss="modal">Remove</button>
+        </div>
+    </div>
+</div>
