--- a/src/app/delete-deal-modal/delete-deal-modal.component.html
+++ b/src/app/delete-deal-modal/delete-deal-modal.component.html
@@ -7,7 +7,7 @@
         </div>
 
         <div class="modal-body">
-            Are you sure you want to permanently remove this deal?
+            Are you sure you want to permanently remove this {{message}}?
         </div>
 
         <div class="modal-footer">
