--- a/src/app/deals/deals.component.html
+++ b/src/app/deals/deals.component.html
@@ -18,7 +18,8 @@
             <p *ngFor="let item of deal.items" class="mb-0">{{item}}</p>
             <h3 class="mb-0 mt-2">
                 <span class="badge badge-warning">RS. {{deal.price}}</span>
-                <span data-target="#deleteDeal" data-toggle="modal" (click)="deleteDeal(deal, i)" class="float-right ml-3">
+                <span data-target="#deleteDeal" data-toggle="modal" (click)="deleteDeal(deal, i)"
+                    class="float-right ml-3">
                     <i class="fa fa-trash text-danger"></i>
                 </span>
                 <span data-target="#addDeal" data-toggle="modal" (click)="editDeal(deal, i)" class="float-right">
@@ -35,6 +36,7 @@
 </div>
 
 
-<div *ngIf="modalClickDel"  class="modal fade" id="deleteDeal">
-    <app-delete-deal-modal [deal]="deal" [activeIndex]="activeIndex" [allDeals]="allDeals" [message]="message" (modalClosedDel)="closeModalDel($event)"></app-delete-deal-modal>
+<div *ngIf="modalClickDel" class="modal fade" id="deleteDeal">
+    <app-delete-deal-modal [deal]="deal" [activeIndex]="activeIndex" [allDeals]="allDeals" [message]="deletionMsg"
+        [firebaseNode]="firebaseNode" (modalClosedDel)="closeModalDel($event)"></app-delete-deal-modal>
 </div>
