method moved to service

--- a/src/app/sideorders/sideorders.component.html
+++ b/src/app/sideorders/sideorders.component.html
@@ -79,5 +79,6 @@
 
 
 <div *ngIf="modalClickDel" class="modal fade" id="deleteMeal">
-    <app-delete-deal-modal [deal]="meal" [allDeals]="allMeals" [activeIndex]="activeIndex" [message]="message" (modalClosedDel)="closeModalDel($event)"></app-delete-deal-modal>
+    <app-delete-deal-modal [deal]="meal" [allDeals]="allMeals" [message]="deletionMsg"
+    [firebaseNode]="firebaseNode" [activeIndex]="activeIndex" (modalClosedDel)="closeModalDel($event)"></app-delete-deal-modal>
 </div>
